sg/main.tf
resource "aws_security_group" "asg_fra" {
    description = "SG for Frankfurt region"
    vpc_id      = var.vpc_id
    ingress {
    description      = "HTTP port 80 for all"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
    ingress {
    description = "SSH"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]

  }
    egress {
    description      = "All traffic"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
    tags = {
        Name = "SG for Frankfurt region"
  }
}
